Fixing the alignment

--- a/Login page/sign-in.css
+++ b/Login page/sign-in.css
@@ -65,7 +65,7 @@ body {
 }
 
 .left >.form >.checklabel >a{
-    margin-left: 4vw;
+    margin-left: 2vw;
     color: white;
     text-decoration: none;
 }
